# MCServerManager

./: .gitignore  LICENSE  main.py  pyproject.toml  util.py
js/: main.js
routers/: modals.py  servers.py  upload.py
static/styling/: index.css  loader.css
templates/: index.html
templates/macros/: server_instance_macro.html
templates/modals/: new_instance.html
utils/: files.py  instances.py
